<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>rBot</groupId>
  <artifactId>rBot</artifactId>
  <version>1.0.0</version>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>2.4.2</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>shade</goal>
                    </goals>
                    <configuration>
                        <transformers>
                            <transformer
                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            </transformer>
                        </transformers>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
   		<groupId>net.dv8tion</groupId>
    	<artifactId>JDA</artifactId>
    	<version>2.1.1_300</version>
    </dependency>
  	<dependency>
  		<groupId>org.apache.commons</groupId>
  		<artifactId>commons-lang3</artifactId>
  		<version>3.4</version>
  	</dependency>
    <dependency>
		<groupId>org.json</groupId>
		<artifactId>json</artifactId>
		<version>20150729</version>
	</dependency>
	<dependency>
    	<groupId>org.java-websocket</groupId>
    	<artifactId>Java-WebSocket</artifactId>
    	<version>1.3.0</version>
	</dependency> 
	<dependency>
    	<groupId>com.neovisionaries</groupId>
    	<artifactId>nv-websocket-client</artifactId>
    	<version>1.16</version>
	</dependency>
	<dependency>
		<groupId>com.google.code.gson</groupId>
		<artifactId>gson</artifactId>
		<version>2.5</version>
	</dependency>
	<dependency>
        <groupId>org.pircbotx</groupId>
        <artifactId>pircbotx</artifactId>
        <version>2.0.1</version>
	</dependency>
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-nop</artifactId>
		<version>1.7.13</version>
	</dependency>
	<dependency>
  		<groupId>org.jsoup</groupId>
  		<artifactId>jsoup</artifactId>
  		<version>1.8.3</version>
	</dependency>
	<dependency>
  		<groupId>com.jcabi</groupId>
  		<artifactId>jcabi-jdbc</artifactId>
  		<version>0.16</version>
	</dependency>
	<dependency>
		<groupId>mysql</groupId>
		<artifactId>mysql-connector-java</artifactId>
		<version>5.1.38</version>
	</dependency>
  </dependencies>
  <repositories>
	<repository>
    	<id>central</id>
    	<name>bintray</name>
    	<url>http://jcenter.bintray.com</url>
	</repository>
  </repositories>
</project>